viewport height fix for pokemon list on mobile

--- a/src/styles/PokemonList.css
+++ b/src/styles/PokemonList.css
@@ -1,5 +1,5 @@
 .list-container {
-  height: 86vh;
+  height: 86svh;
   position: absolute;
   top: 80px;
   right: 30px;
